--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
+    <string name="welcome">Willkommen</string>
     <string name="app_name">KinderserienQuiz</string>
+    <string name="start">Start</string>
 
 </resources>
