Added SettingsView and second button in main menu

--- a/MyApplication/app/src/main/res/values/strings.xml
+++ b/MyApplication/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="welcome">Willkommen</string>
     <string name="app_name">KinderserienQuiz</string>
     <string name="start">Start</string>
+    <string name="settings">Settings</string>
 
 </resources>
